--- a/View/Dashboard/DashboardUCView.xaml
+++ b/View/Dashboard/DashboardUCView.xaml
@@ -3,9 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d">
     <Grid>
-        <Label Content="DASHBOARD" HorizontalAlignment="Left" Margin="100,138,0,0" VerticalAlignment="Top"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"/>
+            <RowDefinition Height="200" />        
+        </Grid.RowDefinitions>
+        
+        <!-- Liste des demande en cours -->
+        <Grid Grid.Row="0"  Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#FF30859A">
+                <Label Content="Demande en cours"  Margin="10,0,0,0" VerticalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="14"/>
+            </StackPanel>
+            <Border BorderThickness="2" BorderBrush="#30859a" Grid.Row="1" />
+            <StackPanel Grid.Row="1" Margin="2" Background="White" />
+        </Grid>
+
+        <!-- Liste des demande en cours -->
+        <Grid Grid.Row="1"  Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35"/>
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#FF30859A">
+                <Label Content="Liste des départs"  Margin="10,0,0,0" VerticalAlignment="Center" Foreground="White" FontWeight="Bold" FontSize="14"/>
+            </StackPanel>
+            <Border BorderThickness="2" BorderBrush="#30859a" Grid.Row="1" />
+            <StackPanel Grid.Row="1" Margin="2" Background="White" />
+        </Grid>
     </Grid>
 </UserControl>
