--- a/View/Organisation/ShowOrganisationUCView.xaml
+++ b/View/Organisation/ShowOrganisationUCView.xaml
@@ -5,6 +5,114 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d"  >
     <Grid>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+
+        <!-- Information générale -->
+        <Grid Grid.Row="0" Grid.Column="0" Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#FF30859A">
+                <Label Content="Fiche Organisation" Margin="10,0,0,0" HorizontalAlignment="Left" Foreground="White" VerticalAlignment="Center" FontWeight="Bold" FontSize="14" Grid.Column="0" Grid.Row="0"/>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"  Command="{Binding cmdEdit}" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/editWhite.png" Width="20" Height="20" />
+                    </StackPanel>
+                </Button>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdDelete}" >
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/deleteWhite.png" Width="20" Height="20" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+            <Border BorderThickness="2" BorderBrush="#30859a" Grid.Column="0" Grid.Row="1" />
+            <Grid Grid.Row="1" Background="White" Margin="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="1*" />
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="27" />
+                        <RowDefinition Height="27"/>
+                        <RowDefinition Height="27"/>
+                        <RowDefinition Height="27"/>
+                        <RowDefinition Height="27"/>
+                        <RowDefinition Height="27"/>
+                        <RowDefinition Height="27"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Nom" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" FontWeight="Bold"/>
+                    <Label Content="Téléphone" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" FontWeight="Bold"/>
+                    <Label Content="E-mail" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" FontWeight="Bold"/>
+                    <Label Content="Adresse" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="3" FontWeight="Bold"/>
+                    <Label Content="NPA" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="4" FontWeight="Bold"/>
+                    <Label Content="Ville" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="5" FontWeight="Bold"/>
+                    <Label Content="Pays" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="0" Grid.Row="6" FontWeight="Bold"/>
+                    <Label Content="{Binding organisation.name}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="0"/>
+                    <Label Content="{Binding organisation.phone.number}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" />
+                    <Label Content="{Binding organisation.email.email1}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" />
+                    <Label Content="{Binding organisation.street}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="3"/>
+                    <Label Content="{Binding organisation.zip}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="4" />
+                    <Label Content="{Binding organisation.city}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5"/>
+                    <Label Content="{Binding organisation.country}" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Grid.Row="6"/>
+
+                </Grid>
+                <StackPanel Grid.Column="1">
+                    <Label Content="Contact Stuff" />
+                </StackPanel>
+            </Grid>
+        </Grid>
+        <Grid Grid.Column="1" Margin="15">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="35" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Background="#FF30859A">
+                <Label Content="Liste des programmes" VerticalAlignment="Center" Margin="10,0,0,0" Foreground="White" FontWeight="Bold" FontSize="14"/>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding cmdAddProgram}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/PrototypeEDUCOM;component/Ressource/addWhite.png" Width="20" Height="20" />
+                    </StackPanel>
+                </Button>
+            </StackPanel>
+
+            <ListView ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" Grid.Row="1" BorderBrush="#FF30859A" BorderThickness="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  ItemsSource="{Binding programs}" x:Name="list">
+                <ListView.View >
+                    <GridView>
+                        <GridView.Columns>
+                            <GridViewColumn  Header="Début" DisplayMemberBinding="{Binding begin_date, StringFormat={}{0:dd/MM/yyyy}}" />
+                            <GridViewColumn  Header="Fin" DisplayMemberBinding="{Binding end_date, StringFormat={}{0:dd/MM/yyyy}}" />
+                            <GridViewColumn  Header="Type" DisplayMemberBinding="{Binding program_types.name}" />
+                            <GridViewColumn>
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Command="{Binding ElementName=list, Path=DataContext.cmdShowProgram}" CommandParameter="{Binding}">
+                                            <StackPanel Orientation="Horizontal">
+                                                <Image Source="/PrototypeEDUCOM;component/Ressource/show.png" Width="15" Height="15" />
+                                            </StackPanel>
+                                        </Button>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView.Columns>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
+        <!-- 
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
             <RowDefinition />
@@ -89,7 +197,6 @@
                                 <GridViewColumn  Header="Début" DisplayMemberBinding="{Binding begin_date, StringFormat={}{0:dd/MM/yyyy}}" />
                                 <GridViewColumn  Header="Fin" DisplayMemberBinding="{Binding end_date, StringFormat={}{0:dd/MM/yyyy}}" />
                                 <GridViewColumn  Header="Type" DisplayMemberBinding="{Binding program_types.name}" />
-                                <!-- Bouton de détail d'un programme -->
                                 <GridViewColumn>
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
@@ -107,5 +214,6 @@
                 </ListView>
             </Grid>
         </Grid>
+        -->
     </Grid>
 </UserControl>
