--- a/View/MainView.xaml
+++ b/View/MainView.xaml
@@ -2,9 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PrototypeEDUCOM.View"
-        Title="EDUCOM Manager" Height="700" Width="1000" WindowStartupLocation="CenterScreen">
+        Title="EDUCOM Manager" Height="700" Width="1200" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TabControl Margin="10,125,10,10" ItemsSource="{Binding tabs.Values}" SelectedItem="{Binding selectedTab}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="285" />
+            <ColumnDefinition Width="600"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        
+        <TabControl Margin="10,10,10,10" ItemsSource="{Binding tabs.Values}" SelectedItem="{Binding selectedTab}" Grid.Row="1" Grid.ColumnSpan="3">
             <TabControl.ItemContainerStyle>
                 <Style TargetType="TabItem">
                     <Setter Property="Content" Value="{Binding content}" />
@@ -21,16 +31,52 @@
                 </Style>
             </TabControl.ItemContainerStyle>
         </TabControl>
-        <Image Source="/PrototypeEDUCOM;component/Ressource/logo.png" HorizontalAlignment="Left" Height="79" Margin="10,15,0,0" VerticalAlignment="Top" Width="256"/>
-        <TextBox HorizontalAlignment="Left" Height="37" Margin="294,35,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="410" FontSize="22"/>
-        <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" Margin="703,35,0,0" VerticalAlignment="Top" Width="40" Height="37"  Background="#FFEEEEEE" BorderBrush="#FFAAAAAA">
-            <Image Source="/PrototypeEDUCOM;component/Ressource/search.png" />
-        </Button>
-        <CheckBox Content="Cients" HorizontalAlignment="Left" Margin="297,81,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Demandes" HorizontalAlignment="Left" Margin="371,81,0,0" VerticalAlignment="Top"/>
-        <CheckBox Content="Organisations" HorizontalAlignment="Left" Margin="467,81,0,0" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="790,10,0,0" TextWrapping="Wrap" Text="A Propos" VerticalAlignment="Top" TextDecorations="Underline"/>
-        <TextBlock HorizontalAlignment="Left" Margin="862,10,0,0" TextWrapping="Wrap" Text="Aide" VerticalAlignment="Top" TextDecorations="Underline"/>
-        <TextBlock HorizontalAlignment="Left" Margin="908,10,0,0" TextWrapping="Wrap" Text="Déconnexion" VerticalAlignment="Top" TextDecorations="Underline"/>
+        <Image Source="/PrototypeEDUCOM;component/Ressource/logo.png" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Height="79"  VerticalAlignment="Center" Width="256"/>
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Orientation="Horizontal" VerticalAlignment="Bottom">
+                <TextBox Height="37" TextWrapping="Wrap" VerticalAlignment="Top" Width="550" FontSize="22"/>
+                <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40" Height="37" Background="#FFEEEEEE" BorderBrush="#FFAAAAAA">
+                    <Image Source="/PrototypeEDUCOM;component/Ressource/search.png" />
+                </Button>
+            </StackPanel>
+
+            <CheckBox Content="Cients" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0"/>
+            <CheckBox Content="Demandes" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1"  Grid.Column="1"/>
+            <CheckBox Content="Organisations" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="1"  Grid.Column="2"/>
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="90" />
+                <ColumnDefinition Width="90"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="A Propos" VerticalAlignment="Top" TextDecorations="Underline" Grid.Column="0"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,10,0,0" TextWrapping="Wrap" Text="Aide" VerticalAlignment="Top" TextDecorations="Underline" Grid.Column="1"/>
+            <TextBlock HorizontalAlignment="Left" Margin="0,10,10,0" TextWrapping="Wrap" Text="Déconnexion" VerticalAlignment="Top" TextDecorations="Underline" Grid.Column="2"/>
+            <Border BorderThickness="1" BorderBrush="#30859a" Grid.ColumnSpan="3" Grid.Row="1" Margin="15" />
+
+            <Grid Grid.Row="1" Grid.ColumnSpan="3" Margin="16" Background="#ebebeb">
+                <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="6" Orientation="Horizontal">
+                    <Image Source="/PrototypeEDUCOM;component/Ressource/userLogin.png" Width="40" Height="40" />
+                    <StackPanel>
+                        <TextBlock Text="{Binding user}" FontWeight="Bold" />
+                        <TextBlock Text="{Binding user.role}" />
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
