--- a/App.xaml
+++ b/App.xaml
@@ -4,7 +4,7 @@
              StartupUri="View\LoginView.xaml">
     <Application.Resources>
         <Style x:Key="alternatingListViewItemStyle" TargetType="{x:Type ListViewItem}">
-            <Setter Property="Margin" Value="0,-1,0,-1"/>
+            <Setter Property="Margin" Value="2,-1"/>
              <Style.Triggers>
                  <!-- setting up triggers for alternate background colors -->
                  <Trigger Property="ItemsControl.AlternationIndex" Value="0">
@@ -15,6 +15,22 @@
                  </Trigger>
              </Style.Triggers>
              <!-- setting row height here --> 
+        </Style>
+        <Style TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
+                        <Border BorderThickness="1,0,0,1" BorderBrush="Black" Background="Red">
+                            <TextBlock Height="30" Margin="0" VerticalAlignment="Center" x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,0" Width="{TemplateBinding Width}" TextAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Padding" Value="-3,-1" />
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontSize" Value="12" />
+            
         </Style>
     </Application.Resources>
 </Application>
