--- a/View/Request/AddRequestView.xaml
+++ b/View/Request/AddRequestView.xaml
@@ -30,7 +30,7 @@
             <Label Content="Etudiant" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="1"/>
             <Label Content="Type de séjour" HorizontalAlignment="Right" Margin="0,6,10,6" Grid.Row="2"/>
 
-            <Label Content="{Binding customer}"  Margin="0,6,10,6" Grid.Row="0" Grid.Column="1"/>
+            <Label Content="{Binding customer.fullName}"  Margin="0,6,10,6" Grid.Row="0" Grid.Column="1"/>
             <ComboBox SelectedItem="{Binding student, Mode=TwoWay}" ItemsSource="{Binding students}" Grid.Row="1" Grid.Column="1" Margin="10,8,10,8" />
             <ComboBox SelectedItem="{Binding journey, Mode=TwoWay}" ItemsSource="{Binding journeys}" Grid.Row="2" Grid.Column="1" Margin="10,8,10,8" />
 
