--- a/View/Customer/DeleteCustomerView.xaml
+++ b/View/Customer/DeleteCustomerView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PrototypeEDUCOM.View.Customer.DeleteCustomerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      Title="DeleteCustomerView" SizeToContent="Height" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+      Title="DeleteCustomerView" SizeToContent="Height" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="55"/>
