--- a/App.xaml
+++ b/App.xaml
@@ -20,17 +20,17 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                        <Border BorderThickness="1,0,0,1" BorderBrush="Black" Background="Red">
-                            <TextBlock Height="30" Margin="0" VerticalAlignment="Center" x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,0" Width="{TemplateBinding Width}" TextAlignment="Center" />
+                        <Border BorderThickness="1,0,0,1" BorderBrush="#808080" Background="#c5dee4">
+                            <TextBlock Height="25" Margin="0" VerticalAlignment="Center" x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,0" Width="{TemplateBinding Width}" TextAlignment="Center" />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
             <Setter Property="Padding" Value="-3,-1" />
             <Setter Property="OverridesDefaultStyle" Value="True" />
-            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="Foreground" Value="#414141" />
             <Setter Property="FontSize" Value="12" />
-            
+            <Setter Property="FontWeight" Value="Bold" />
         </Style>
     </Application.Resources>
 </Application>
