--- a/App.xaml
+++ b/App.xaml
@@ -25,7 +25,7 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
                         <Border BorderThickness="1,0,0,1" BorderBrush="#808080" Background="#c5dee4">
-                            <TextBlock Height="25" Margin="0" VerticalAlignment="Center" x:Name="ContentHeader" Text="{TemplateBinding Content}" Padding="5,5,5,0" Width="{TemplateBinding Width}" TextAlignment="Center" />
+                            <Button Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Height="25" Margin="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="ContentHeader" Content="{TemplateBinding Content}" Command="{TemplateBinding Command}" CommandParameter="{TemplateBinding CommandParameter}" Width="{TemplateBinding Width}"  />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
